--- a/bootstrap.html
+++ b/bootstrap.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bootstrap中文网</title>
-	<link rel="stylesheet" href="./Bootstrap.css">
+	<link rel="stylesheet" href="https://wange2000.github.io/BootStrap/bootstrap.css">
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
 <body>
@@ -262,7 +262,7 @@
 	<br>
 	<br>
 	<br>
-	<script type="text/javascript" src='./jquery.js'></script>
+	<script type="text/javascript" src='https://wange2000.github.io/BootStrap/jquery.js'></script>
 	<script type="text/javascript">
 		$('.hidden-btn').click(function(){
 			$('.hidden-box').slideToggle(300);
